0030342: Modeling Data - Successively trimming surface in both directions lose the first trim

Added trim for U and V directions when trimming happens sequentially in these directions.
Added possibility to set sense to trim command.